update code to add file via enviorment variable

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,3 +5,5 @@ spring.thymeleaf.suffix=.html
 
 server.compression.enabled=true
 server.compression.mime-types=text/html,text/xml,text/plain,application/json
+logger.file.path=${LOG_FILE_PATH}
+
